...
            tools:listitem="@layout/meeting_hour_filter_item_view"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_list_meeting_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/meeting_items_view"
        app:layout_constraintTop_toBottomOf="@id/activity_list_meeting_app_bar_layout"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/activity_list_meeting_add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/space_cadet_blue"
        android:contentDescription="@string/fab_content_description"
        android:src="@drawable/ic_baseline_add_24"
...
