...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <TextView
            android:id="@+id/meeting_details_meeting_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="NomReu - 10h45 - Tokyo"
            android:fontFamily="@font/alata"
            android:textColor="@color/space_cadet_blue"
            android:textSize="28sp"
...
